Fix visibility placeholder text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,10 +168,11 @@ cursor:pointer;
 }
 
 .input-text::placeholder {
-    font-size: 0.5rem; 
+    font-size: 0.7rem; 
     text-align: center; 
     letter-spacing: 0rem;   
     padding-top: 1rem; 
+    color: black;
 }
 
 .div-gameover {
